welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: '=' expected but ';' found.
	if(vuBiscuit()=false){
^