welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit() 
	if(vuBiscuit()=false){
		avance()
	}
}
